# iMusic_Reze

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddSongModal.tsx  ConfirmModal.tsx  DraggableSongItem.tsx  Header.tsx  MusicControls.tsx  PlaylistCard.tsx  ProgressBar.tsx  VinylRecord.tsx
src/contexts/: AudioContext.tsx  useDominantColor.ts
src/pages/: ListMusic.tsx  Player.tsx  PlaylistAdd.tsx  PlaylistDetail.tsx  Playlists.tsx  Setting.tsx
src/utils/: RgbToHex.tsx
