[package]
name = "i-music"
version = "1.0.0"
description = "iMusic là một trình phát nhạc cá nhân, gọn nhẹ và mạnh mẽ."
authors = ["Vy Phan Dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "i_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
symphonia = { version = "0.5", features = ["mp3", "wav"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-media = "0.1.1"
walkdir = "2.5.0"
image = { version = "0.25.1", features = ["jpeg", "png", "webp"] }

